Modifico logica de las condiciones para iniciar sesión ya que no era correcta. Modifique la dinámica de la visibilidad del botón registrar.

--- a/src/main/resources/org/utl/dsm/dsm406_controlpacientes/style/styleVentanaAlerta.css
+++ b/src/main/resources/org/utl/dsm/dsm406_controlpacientes/style/styleVentanaAlerta.css
@@ -1,4 +1,4 @@
-.My-Color-Theme-2-hex {
+.mainContainer {
     -fx-background-color: #37474F; /* Cambia el color de fondo según tus preferencias */
 }
 
